src/css/profile/wearable/changeable/theme-circle/arclistview.less
.ui-arc-listview {
	width: 360 * @unit_base;
	display: block;
	overflow: hidden;
	top: 0;
	left: 0;

	&-carousel {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;

		&-item {
			width: 360 * @unit_base;
			position: absolute;
			height: 108 * @unit_base;

			li {
				top: 54 * @unit_base;
				transform: translateY(-50%);
			}

			&-hidden {
				display: none;
			}
		}
	}

	&-5 {
		.ui-arc-listview-carousel-item {
			height: 70 * @unit_base;

			li {
				top: 35 * @unit_base;
				transform: translateY(-50%);
			}
		}
	}

	&-selection {
		opacity: 0;
		position: absolute;
		transition: opacity 250ms;
		pointer-events: none;
		transform: translateY(-50%);
		top: 50%;
		width: 360 * @unit_base;
		height: 120 * @unit_base;
		left: 0;
		right: 0;
		border-radius: 72 * @unit_base;
		background-color: @color_listview_focus;
		&-show {
			opacity: 1;
		}
	}
}

.ui-arc-listview, .ui-arc-listview-carousel {
	li {
		justify-content: space-around;
		display: flex;
		align-items: center;

		&:not(.ui-li-group-index):not(.ui-listview-divider) {
			min-height: 108 * @unit_base;
			vertical-align: middle;
		}

		&.ui-li-group-index, &.ui-listview-divider {
			margin-top: 0;
			border: 0;
			flex-direction: row;

			~ li:not(.ui-li-group-index):not(.ui-listview-divider) {
				margin-top: 0;
			}
		}
		
	}

	.ui-arc-listview-carousel-item {
		li {
			/* below style is not prefixed "ui-" for backward compatibility */
			&.li-has-thumb {
				&-left {
					padding-left: 100 * @unit_base;
				}

				&-right {
					padding-right: 100 * @unit_base;
				}
			}
			&.ui-li-grid {
				.ui-arc-listview-text-content {
					margin-left: 0;
					div {
						margin-left: 0;
					}
				}
			}
		}
	}

	&.ui-arc-listview-5 {
		li {
			&:not(.ui-li-group-index):not(.ui-listview-divider) {
				min-height: 70 * @unit_base;
			}

			&.ui-arc-listview-selected {
				line-height: 70 * @unit_base;
			}
		}
	}
}

.ui-arc-listview-carousel {
	/* disable some unnecessary listview styles */
	.ui-listview {
		padding-bottom: 0;
	}
}

.ui-force-relative-li-children li {
	position: relative !important;
}

/* Keyboard is visible, screen height is lower then half of screen */
@media (max-height: 180px) {
	.ui-arc-listview-carousel li {
		input[type=text],
		input[type=password] {
			&:focus {
				position: fixed;
				height: auto;
				border: none;
				bottom: 0;
				left: 0;
				right: 0;
				top: auto;
				margin-top: auto;
				padding: 26 * @unit_base 50 * @unit_base 5 * @unit_base  50 * @unit_base;
			}
		}
	}
}

